# FFmpegPlayerWithQt

./: .gitignore  AVDeCode.cpp  AVDeCode.h  CMakeLists.txt  MediaFrame.cpp  MediaFrame.h  MediaPacket.cpp  MediaPacket.h  MediaPlayer.cpp  MediaPlayer.h  MeidaStream.cpp  MeidaStream.h  README.md  SDLRenderWidget.cpp  SDLRenderWidget.h  main.cpp  widget.cpp  widget.h  widget.ui
